# Eli_Felse_Base

./: .gitignore  LICENSE  README.md  config.example.yaml  persona.example.yaml  pyproject.toml  trusted_modules.json
.github/ISSUE_TEMPLATE/: bug_report.yml  module_approval.yml
.github/workflows/: ci.yml
docs/: developing-modules.md  getting-started.md  model-options.md  modules.md  red-teaming.md  safety-claims.md
src/elifelse/: __init__.py  __main__.py  app.py  backup.py  cli.py  config.py  dashboard.py  logging_setup.py  paths.py  persona.py  prompts.py  textutils.py  wizard.py
src/elifelse/activities/: __init__.py  base.py  ctx.py  registry.py
src/elifelse/channels/: __init__.py  base.py  terminal.py
src/elifelse/environment/: __init__.py  system.py  weather.py  wmo.py
src/elifelse/innerlife/: __init__.py  profiles.py  selffacts.py  surveys.py  system.py
src/elifelse/loop/: control.py  controller.py  daycycle.py  lifecycle.py  menus.py  scheduler.py
src/elifelse/memory/: __init__.py  chroma.py  consolidation.py  extraction.py  recall.py  store.py  system.py
src/elifelse/providers/: __init__.py  base.py  budget.py  lmstudio_loader.py  mock.py  openai_compat.py
tests/: conftest.py  fakes.py  test_backup.py  test_builtin_activities.py  test_channels.py  test_config.py  test_context_store.py  test_control.py  test_daycycle.py  test_environment.py  test_innerlife.py  test_lifecycle.py  test_loop.py  test_memory.py  test_provider_mock.py  test_registry.py  test_saves.py  test_summary.py  test_validation.py  test_wizard.py  test_ws_sink.py
(+21 files in other folders)
