[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elifelse"
version = "0.1.0"
description = "A framework for running an autonomous AI character safely: the LLM makes choices, Python does everything else."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "ella0333" }]
keywords = ["llm", "agent", "autonomous", "safety", "structured-output"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "chromadb>=0.5",
    "websockets>=12.0",
    "packaging>=23.0",
    "tzdata; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
elifelse = "elifelse.cli:main"

[project.urls]
Repository = "https://github.com/ella0333/Eli_Felse_Base"

[tool.hatch.build.targets.wheel]
packages = ["src/elifelse"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
